<resources>
    <string name="app_name">BitValue</string>
    <string name="title">Title</string>
    <string name="pairs">Pairs</string>
    <string name="ask">Best ask price:</string>
    <string name="bid">Best bid price:</string>
    <string name="last">Last trade price:</string>
    <string name="open">Last trade price 24 hours ago:</string>
    <string name="low">Lowest trade price within 24 hours:</string>
    <string name="high">Highest trade price within 24 hours:</string>
    <string name="volume">Total trading amount within 24 hours in base currency:</string>
    <string name="history">History</string>
    <string name="open_on">Open: </string>
</resources>
