<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">
    <TextView
        android:id="@+id/tvTickerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="Pare Name:"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvTickerNameValue"
        android:layout_toRightOf="@+id/tvTickerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvAsk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTickerName"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="6dp"
        android:text="@string/ask"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <TextView

        android:id="@+id/tvAskValue"
        android:layout_toRightOf="@+id/tvAsk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTickerName"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="17sp" />


    <TextView

        android:id="@+id/tvBid"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAsk"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="6dp"
        android:text="@string/bid"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/tvBidValue"
        android:layout_toRightOf="@+id/tvBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAsk"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBid"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="6dp"
        android:text="@string/last"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/tvLastValue"
        android:layout_toRightOf="@+id/tvLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBid"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLast"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="6dp"
        android:text="@string/open"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/tvOpenValue"
        android:layout_toRightOf="@+id/tvOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLast"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvOpen"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="6dp"
        android:text="@string/low"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/tvLowValue"
        android:layout_toRightOf="@+id/tvLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvOpen"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLow"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="6dp"
        android:text="@string/high"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/tvHighValue"
        android:layout_toRightOf="@+id/tvHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLow"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btnHistory"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHigh"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:text="@string/history"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

</LinearLayout>